--- a/src/slimbookintelcontroller-autostart.desktop
+++ b/src/slimbookintelcontroller-autostart.desktop
@@ -5,7 +5,7 @@ Hidden=false
 NoDisplay=false
 X-GNOME-Autostart-enabled=true
 Name[es_ES]=slimbookintelcontroller-autostart.desktop
-Name=Slimbook Amd Controller Autostart
-Comment[es_ES]=Arranque de autoinicio de Slimbook AMD Controller
+Name=Slimbook Intel Controller Autostart
+Comment[es_ES]=Arranque de autoinicio de Slimbook Intel Controller
 Comment=Slimbook Intel Contoller's autostart executable
 X-GNOME-Autostart-Delay=0
