--- a/src/slimbookintelcontroller-autostart.desktop
+++ b/src/slimbookintelcontroller-autostart.desktop
@@ -7,5 +7,5 @@ X-GNOME-Autostart-enabled=true
 Name[es_ES]=slimbookintelcontroller-autostart.desktop
 Name=Slimbook Intel Controller Autostart
 Comment[es_ES]=Arranque de autoinicio de Slimbook Intel Controller
-Comment=Slimbook Intel Contoller's autostart executable
-X-GNOME-Autostart-Delay=0
+Comment=Slimbook Intel Controller's autostart executable
+X-GNOME-Autostart-Delay=15
