--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Homepage: http://slimbook.es
 Package: slimbookintelcontroller
 Architecture: all
 Depends: ${misc:Depends}, ${python:Depends},
-     python3,
+  python3,
      python3-gi,
      python3-pil,
      python3-dbus,
@@ -18,7 +18,7 @@ Depends: ${misc:Depends}, ${python:Depends},
      libnotify-bin,
      cmake,
      cmake-data,
-     gir1.2-appindicator3-0.1,
+     gir1.2-ayatanaappindicator3-0.1,
      libcurl4,
      libpci-dev,
      librhash0,
