--- a/debian/control
+++ b/debian/control
@@ -13,12 +13,14 @@ Depends: ${misc:Depends}, ${python:Depends},
      python3-gi,
      python3-pil,
      python3-dbus,
+     gir1.2-ayatanaappindicator3-0.1,
+     gnome-shell-extension-appindicator,
      git,
      build-essential,
      libnotify-bin,
      cmake,
      cmake-data,
-     gir1.2-ayatanaappindicator3-0.1,
+     mokutil,
      libcurl4,
      libpci-dev,
      librhash0,
