--- a/src/configuration/slimbookintelcontroller.conf
+++ b/src/configuration/slimbookintelcontroller.conf
@@ -3,6 +3,7 @@ mode = medium
 autostart = on
 show-icon = on
 cpu = 
+cpu-parameters = 
 
 
 [PROCESSORS]
@@ -22,3 +23,4 @@ i7-10510U = 10@12/12@18/15@28/ 10/15/25/ w
 i7-10750H = 35@40/40@45/45@54/ 35/45/54/ w (prox 15) 
 i7-10875H = 35@40/40@45/45@54/ 35/45/54/ w (?) 
 i7-1165G7 = 10@12/12@18/15@30/ 12/15/28/ w (executive) 
+i7-10710U = 10@12/12@18/15@28/ 10/15/25/ w
