--- a/debian/control
+++ b/debian/control
@@ -2,23 +2,14 @@ Source: slimbookintelcontroller
 Section: utils
 Priority: extra
 Maintainer: slimbook <dev@slimbook.es>
-Build-Depends: debhelper (>= 9)
-Standards-Version: 3.9.6
-Homepage: http://slimbook.es
+Build-Depends: debhelper-compat (= 13), dh-python
+Standards-Version: 4.6.0
+Homepage: https://github.com/Slimbook-Team/slimbookintelcontroller
+Rules-Requires-Root: no
  
 Package: slimbookintelcontroller
 Architecture: all
-Depends: ${misc:Depends}, ${python:Depends},
-     python3,
-     python3-gi,
-     python3-pil,
-     python3-dbus,
-     gir1.2-ayatanaappindicator3-0.1,
-     git,
-     build-essential,
-     libnotify-bin,
-     cmake,
-     mokutil,
-     libcurl4,
-Description: Aplicacion para la gestion de rendimiento de procesadores intel
- Aplicacion para la gestion de rendimiento de procesadores intel
+Depends: ${misc:Depends}, ${python:Depends},python3, python3-gi, python3-matplotlib,
+ libnotify-bin, gir1.2-ayatanaappindicator3-0.1, intel-undervolt
+Description: Application for managing the performance of Intel processors
+ Application for managing the performance of Intel processors
